--- a/scss/_media_breakpoints.scss
+++ b/scss/_media_breakpoints.scss
@@ -30,6 +30,12 @@ $small-content-height:420px;
     #money-supply-applet {
         margin-bottom: 3.5rem;
     }
+
+    #inflation-vector-result-container {
+        width: 30%;
+        padding: 1rem;
+        text-align: center;
+    }
 }
 
 /* Small devices (landscape phones, 544px and up) */
