--- a/scss/_modals.scss
+++ b/scss/_modals.scss
@@ -39,13 +39,12 @@
 
 #inflation-vector-result-container {
     font-family: 'Roboto', sans-serif;
-    text-align: right !important;
+    text-align: right;
     border: solid #5075AB 4px;
     width: 25%;
     //width: -moz-fit-content;
     margin: 1rem auto;
     padding: 1rem;
-    text-align: center;
 
     h1 {
         font-size: $h1-font-size * 1.3;
